# nerpa

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  antismash_helper.py  benchmarking_plots.py  command_line_args_helper.py  compare_nerpa.py  config.py  config.yaml  debug.py  environment.yml  generate_permutations.py  install.sh  monomer_frequencies.yaml  nerpa.py  pipeline_helper.py  pipeline_helper_antismash.py  pipeline_helper_rban.py  rban_helper.py  requirements.txt  run_antismash.py  run_nerpa.sh  run_nerpa_kenan.sh  run_nerpa_pnrpdb2_vs_as_db5_top1_bgc.sh  sandbox.ipynb  test_nerpa.py  train_nerpa.py  visualize_rban.ipynb
_run_configurations/: _nerpa_check_compounds_similarity.py  _nerpa_parse_compounds.py  _nerpa_single_mibig_nrp.py  benchmark_alignment_reconstruction.py  benchmark_nerpa1_vs_nerpa2_vs_biocat.py  lars_compounds_similarity.sh  nerpa_test_run.sh  (+4 more)
src/nerpa_ms/nerpa_ms_core/: Cargo.toml  project-overview.md
src/nerpa_ms/nerpa_ms_core/_run_configurations/: create_mon_db.py  gen_dp_tests.py  test.py  test_create_mon_db.py
src/nerpa_ms/nerpa_ms_core/data/: monomers_db.json
src/nerpa_ms/nerpa_ms_core/fixtures/: input_example.json  rban_records_list_example.json
src/nerpa_ms/nerpa_ms_core/src/: cli.rs  lib.rs  main.rs
src/nerpa_ms/nerpa_ms_core/src/algo/: algo_main.rs  apply_modifications.rs  dp.rs  dp_backtrack.rs  graph_to_dag.rs  mod.rs  solve_brute_force.rs
src/nerpa_ms/nerpa_ms_core/src/data_types/: bonds.rs  common_types.rs  dag.rs  discrete_log_prob.rs  dp_table.rs  graph_modifications.rs  hmm.rs  json_helpers.rs  mod.rs  monomer_graph.rs  monomer_graph_to_rban_record.rs  monomers_db.rs  parsed_rban_record.rs  rban_record_bonds.rs  rban_record_to_monomer_graph.rs
src/nerpa_ms/nerpa_ms_core/src/io/: draw_dag.rs  draw_hmm.rs  draw_hmm_dag.rs  draw_molecules.rs  draw_nerpa_hmm.rs  input.rs  join_svgs.rs  mod.rs  output.rs
src/nerpa_ms/nerpa_ms_core/src/testing/: dp_vs_bruteforce.rs  dp_vs_bruteforce_paths.rs  dp_vs_bruteforce_table.rs  mod.rs
src/nerpa_ms/nerpa_ms_core/tests/: compute_dp_table.rs  discrete_log_prob.rs  dp_table.rs  dp_vs_bruteforce.rs
src/nerpa_ms/nerpa_ms_core/tests/fixtures/: dp_vs_bruteforce_tests_curated.json  dp_vs_bruteforce_tests_rand.json
(+479 files in other folders)
