[package]
name = "nerpa_ms_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
derive_more = { version = "1", features = ["display"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
itertools = "0.11"
json5 = "0.4"
rand = "0.8"
rand_chacha = "0.3"
tabwriter = "1"
minilp = "0.2"
